fix overlapping styles in buttons

--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -75,7 +75,14 @@ span button{
 .input-field i{
     position: absolute;
 }
-.icon {
+.iconUser {
+    position: relative;
+    right: 53px;
+    font-size: 34px;
+    padding-top: 5px;
+    color: rgba(125, 73, 248,0.15);
+}
+.iconPassword {
     position: relative;
     right: 53px;
     font-size: 34px;
@@ -90,7 +97,7 @@ span button{
     padding: 86px 0px 53px 0px;
     width:100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -275,7 +282,7 @@ span button{
     color: #B99CFC;
     margin-bottom: 10px;
 }
-.btn-field{
+.btn-field2{
     display: flex;
     justify-content: space-between;
     height: 60px;
